# botbloq

./: .gitignore  README.md
Entregables e Informes/template/: template.dvi
Entregables_Informes/2016/PT03/Anexos 3.3/: python-generation.js
Entregables_Informes/2016/PT03/Anexos 3.3/bloqs/hexapod/: botbloqHexapodLateralDisplacement.json  botbloqHexapodMove.json  botbloqHexapodStop.json
Entregables_Informes/2016/PT03/Anexos 3.3/bloqs/human/: botbloqHumanBendDown.json  botbloqHumanLateralDisplacement.json  botbloqHumanMove.json  botbloqHumanRotateByFoot.json  botbloqHumanStop.json  botbloqHumanUpstairs.json
Entregables_Informes/2016/PT03/Anexos 3.3/bloqs/manipulator/: botbloqManipulatorCanMove.json  botbloqManipulatorMove.json  botbloqManipulatorMoveClamp.json  botbloqManipulatorRotateJoints.json
Entregables_Informes/template/: template.aux  template.toc
Intel_Edison/Comunicacion_I2C/Esclavo_Arduino/: Esclavo_Arduino.ino
Intel_Edison/Comunicacion_I2C/maestro_i2c/: CMakeLists.txt  maestro_i2c.cpp  package.xml  package.xml~  prueba_pines.cpp~
POC/: README.md
POC/movile_app/: README.md
POC/movile_app/botbloq/: bower.json  config.xml  ionic.project  package.json
POC/movile_app/botbloq/www/: index.html
POC/movile_app/botbloq/www/js/: LaunchPadCtrl.js  app.js  hubsApi.js
POC/ros_ws/: .gitignore
POC/ros_ws/src/comm_bridge/: CMakeLists.txt  package.xml
POC/ros_ws/src/comm_bridge/scripts/: server.py  service_client.py
POC/ros_ws/src/comm_bridge/srv/: GetAcc.srv
template/: template.aux  template.tex
(+10 files in other folders)
